--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ footer div a, .network__left p, .about__right p, .banner .left button, .banner .
   line-height: 16px;
 }
 
-.about__right button {
+.about__right button, .range div a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -118,7 +118,7 @@ footer div h2 {
   line-height: 16px;
 }
 
-.network__left h2, .about__right h2, .range .block .cards .card a, .range h2, .banner .left div .title, .banner .left h1 {
+.network__left h2, .about__right h2, .range .block .cards .card a, .range div h2, .banner .left div .title, .banner .left h1 {
   font-family: "Playfair Display";
   font-style: normal;
   font-weight: 400;
@@ -134,7 +134,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   line-height: 24px;
 }
 
-.range .block .cards .card p {
+.range .block .cards .card p, .banner .right p {
   font-family: "Prata";
   font-style: normal;
   font-weight: 400;
@@ -177,8 +177,7 @@ header div img {
 }
 header div a {
   cursor: pointer;
-  font-size: 14px;
-  line-height: 16px;
+  position: relative;
   color: #555248;
   margin-right: 65px;
 }
@@ -192,6 +191,20 @@ header div a:last-child {
 }
 header div a:hover {
   color: red;
+}
+header div a::before {
+  content: "";
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background-color: red;
+  transition: 0.2s;
+}
+header div a:hover:before {
+  width: 100%;
+  left: 0;
 }
 header .link img {
   cursor: pointer;
@@ -307,8 +320,26 @@ header .link img:hover {
     width: 250px;
   }
 }
+.banner .left button:hover {
+  box-shadow: 0 0 20px #444240, 0 0 40px #444240, 0 0 80px #444240;
+}
 .banner .right {
   position: relative;
+}
+.banner .right p {
+  color: #1B1A17;
+}
+.banner .right__price {
+  position: absolute;
+  width: 10vw;
+  top: 130px;
+  left: 100px;
+}
+.banner .right__dia {
+  position: absolute;
+  width: 10vw;
+  left: 500px;
+  bottom: 100px;
 }
 .banner .right .bg {
   position: absolute;
@@ -338,18 +369,38 @@ header .link img:hover {
     padding-left: 20px;
   }
 }
-.range h2 {
+.range div h2 {
   display: flex;
   justify-content: center;
   color: #1B1A17;
   padding: 65px 0;
 }
 @media screen and (max-width: 360px) {
-  .range h2 {
+  .range div h2 {
     font-size: 24px;
     justify-content: start;
     padding: 30px 0;
   }
+}
+.range div a {
+  position: relative;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #444240;
+  margin-left: 1170px;
+}
+.range div a:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 90%;
+  left: 5px;
+  top: 20px;
+  border: 1px solid #C4C0B6;
+}
+.range div a:hover {
+  color: red;
 }
 .range .block {
   display: flex;
@@ -427,6 +478,9 @@ header .link img:hover {
   font-size: 16px;
   line-height: 21px;
   color: #1B1A17;
+}
+.range .block .cards .card a:hover {
+  color: red;
 }
 .range .block .cards .card a:before {
   content: "";
@@ -549,7 +603,7 @@ header .link img:hover {
 .network__left {
   display: flex;
   flex-direction: column;
-  padding: 150px 70px 150px 0px;
+  padding: 50px 70px 50px 0px;
 }
 @media screen and (max-width: 820px) {
   .network__left {
@@ -571,7 +625,6 @@ header .link img:hover {
   }
 }
 .network__left p {
-  font-weight: 400;
   font-size: 16px;
   line-height: 27px;
   color: #444240;
@@ -601,6 +654,18 @@ header .link img:hover {
 }
 .network__left img:last-child {
   margin: 0;
+}
+.network__links {
+  display: flex;
+  align-items: center;
+}
+.network__links div {
+  margin-right: 20px;
+}
+@media screen and (max-width: 360px) {
+  .network__links div {
+    margin-bottom: 20px;
+  }
 }
 .network__right {
   display: grid;
