--- a/scss/Blocks/_Header.scss
+++ b/scss/Blocks/_Header.scss
@@ -26,8 +26,7 @@ header {
     a {
       @extend %robotonormal;
       cursor: pointer;
-      font-size: 14px;
-      line-height: 16px;
+      position: relative;
       color: #555248;
       margin-right: 65px;
       @media screen and (max-width: 360px) {
@@ -39,6 +38,20 @@ header {
     }
     a:hover {
       color: red;
+    }
+    a::before {
+      content: '';
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      background-color: red;
+      transition: 0.2s;
+    }
+    a:hover:before {
+      width: 100%;
+      left: 0;
     }
   }
   .link {
