--- a/scss/Blocks/_Network.scss
+++ b/scss/Blocks/_Network.scss
@@ -13,7 +13,7 @@
   &__left {
     display: flex;
     flex-direction: column;
-    padding: 150px 70px 150px 0px;
+    padding: 50px 70px 50px 0px;
     @media screen and (max-width: 820px) {
       flex-wrap: wrap;
       flex-direction: row;
@@ -32,7 +32,6 @@
     }
     p {
       @extend %robotonormal;
-      font-weight: 400;
       font-size: 16px;
       line-height: 27px;
       color: #444240;
@@ -56,6 +55,16 @@
     }
     img:last-child {
       margin: 0;
+    }
+  }
+  &__links {
+    display: flex;
+    align-items: center;
+    div {
+      margin-right: 20px;
+      @media screen and (max-width: 360px) {
+        margin-bottom: 20px;
+      }
     }
   }
   &__right {
