--- a/scss/Blocks/_Network.scss
+++ b/scss/Blocks/_Network.scss
@@ -5,7 +5,7 @@
   @media screen and (max-width: 820px) {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
-    padding: 30;
+    padding: 100px 40px;
   }
   @media screen and (max-width:360px) {
     padding: 20px;
@@ -16,7 +16,7 @@
     padding: 50px 70px 50px 0px;
     @media screen and (max-width: 820px) {
       flex-wrap: wrap;
-      flex-direction: row;
+      flex-direction: column;
       padding: 0;
     }
     .descr {
@@ -39,6 +39,7 @@
       margin-bottom: 120px;
       @media screen and (max-width: 820px) {
         width: 50vw;
+        margin-bottom: 40px;
       }
       @media screen and (max-width:360px) {
         width: 80vw;
@@ -48,6 +49,9 @@
     img {
       cursor: pointer;
       margin-right: 20px;
+      @media screen and (max-width: 820px) {
+        padding-bottom: 40px;
+      }
       @media screen and (max-width:360px) {
         margin-right: 130px;
         margin-bottom: 15px;
@@ -72,6 +76,9 @@
     gap: 10px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    @media screen and (max-width: 820px) {
+      width: 90vw;
+    }
     .gallery {
       position: relative;
       img {
