--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ body {
 }
 @media screen and (max-width: 820px) {
   body {
+    padding: 0;
     margin: 0;
   }
 }
@@ -94,7 +95,7 @@ main {
   grid-area: main;
 }
 
-footer div a, .network__left p, .about__right p, .banner .left button, .banner .left div p, header div a {
+footer div a, .network__left p, .about__right p, .banner .left button, .banner .left div p, .header__nav a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -102,7 +103,7 @@ footer div a, .network__left p, .about__right p, .banner .left button, .banner .
   line-height: 16px;
 }
 
-.about__right button, .range div a {
+.about__right button, .range__whatch a {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -142,57 +143,60 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   line-height: 22px;
 }
 
-header {
+.header {
   grid-area: header;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 36px 6vw;
 }
-@media screen and (max-width: 360px) {
-  header {
+@media screen and (max-width: 820px) {
+  .header {
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    width: 1080px;
   }
 }
 @media screen and (max-width: 360px) {
-  header {
+  .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
     padding: 20px;
   }
 }
-header div {
+.header__logo {
   display: flex;
   align-items: center;
 }
 @media screen and (max-width: 360px) {
-  header div {
-    padding: 10px;
-  }
-  header div div:last-child {
-    padding: 0;
+  .header__nav {
+    padding: 10px 0;
   }
 }
-header div img {
-  margin-right: 5px;
-}
-header div a {
+.header__nav a {
   cursor: pointer;
   position: relative;
   color: #555248;
   margin-right: 65px;
 }
-@media screen and (max-width: 360px) {
-  header div a {
+@media screen and (max-width: 820px) {
+  .header__nav a {
     margin-right: 30px;
   }
 }
-header div a:last-child {
+@media screen and (max-width: 360px) {
+  .header__nav a {
+    margin-right: 30px;
+  }
+}
+.header__nav a:last-child {
   margin: 0;
 }
-header div a:hover {
+.header__nav a:hover {
   color: red;
 }
-header div a::before {
+.header__nav a::before {
   content: "";
   bottom: 0;
   right: 0;
@@ -202,23 +206,23 @@ header div a::before {
   background-color: red;
   transition: 0.2s;
 }
-header div a:hover:before {
+.header__nav a:hover:before {
   width: 100%;
   left: 0;
 }
-header .link img {
+.header__link img {
   cursor: pointer;
   margin-right: 20px;
 }
 @media screen and (max-width: 360px) {
-  header .link img {
+  .header__link img {
     margin-right: 120px;
   }
 }
-header .link img:last-child {
+.header__link img:last-child {
   margin: 0;
 }
-header .link img:hover {
+.header__link img:hover {
   color: red;
 }
 
@@ -369,28 +373,24 @@ header .link img:hover {
     padding-left: 20px;
   }
 }
-.range div h2 {
-  display: flex;
-  justify-content: center;
-  color: #1B1A17;
-  padding: 65px 0;
-}
-@media screen and (max-width: 360px) {
-  .range div h2 {
-    font-size: 24px;
-    justify-content: start;
-    padding: 30px 0;
-  }
-}
-.range div a {
+.range__whatch a {
   position: relative;
-  font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   color: #444240;
   margin-left: 1170px;
 }
-.range div a:before {
+@media screen and (max-width: 820px) {
+  .range__whatch a {
+    margin-left: 700px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .range__whatch a {
+    margin-left: 220px;
+  }
+}
+.range__whatch a:before {
   content: "";
   position: absolute;
   display: block;
@@ -399,8 +399,27 @@ header .link img:hover {
   top: 20px;
   border: 1px solid #C4C0B6;
 }
-.range div a:hover {
+.range__whatch a:hover {
   color: red;
+}
+.range div h2 {
+  display: flex;
+  justify-content: center;
+  color: #1B1A17;
+  padding: 65px 0;
+}
+@media screen and (max-width: 820px) {
+  .range div h2 {
+    padding: 65px 100px;
+    justify-content: start;
+  }
+}
+@media screen and (max-width: 360px) {
+  .range div h2 {
+    font-size: 24px;
+    justify-content: start;
+    padding: 30px 0;
+  }
 }
 .range .block {
   display: flex;
