--- a/scss/Blocks/_All.scss
+++ b/scss/Blocks/_All.scss
@@ -19,6 +19,7 @@ body {
   margin-left: 200px;
   background-color: dimgray;
   @media screen and (max-width: 820px) {
+    padding: 0;
     margin: 0;
   }
 }
