--- a/css/style.css
+++ b/css/style.css
@@ -73,22 +73,26 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   max-width: 1366px;
-  margin-left: 200px;
-  background-color: dimgray;
+  background: #FDFDFB;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   body {
-    padding: 0;
-    margin: 0;
+    max-width: 790px;
+  }
+}
+@media screen and (max-width: 767px) {
+  body {
+    max-width: none;
   }
 }
 
 .wrapper {
   display: grid;
   min-height: 100vh;
-  background: #FDFDFB;
   grid-template: minmax(100px, auto) 1fr minmax(70px, auto)/1fr;
   grid-template-areas: "header" "main" "footer";
+  max-width: 1166px;
+  margin: 0 auto;
 }
 
 main {
@@ -148,13 +152,17 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 36px 6vw;
+  padding: 36px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .header {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 1080px;
+    justify-content: space-around;
+    max-width: 890px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header {
+    max-width: 760px;
   }
 }
 @media screen and (max-width: 360px) {
@@ -179,11 +187,6 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   position: relative;
   color: #555248;
   margin-right: 65px;
-}
-@media screen and (max-width: 820px) {
-  .header__nav a {
-    margin-right: 30px;
-  }
 }
 @media screen and (max-width: 360px) {
   .header__nav a {
@@ -228,20 +231,21 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 
 .banner {
   display: flex;
+  height: 768px;
+}
+@media screen and (max-width: 360px) {
+  .banner {
+    height: 300px;
+  }
 }
 .banner .left {
   display: flex;
   flex-direction: column;
-  padding: 230px 0px 230px 180px;
-}
-@media screen and (max-width: 820px) {
-  .banner .left {
-    padding: 230px 0px 230px 50px;
-  }
+  padding: 230px 0px 230px 50px;
 }
 @media screen and (max-width: 360px) {
   .banner .left {
-    padding: 0px 50px;
+    padding: 0px;
   }
 }
 .banner .left h1 {
@@ -272,7 +276,6 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 }
 .banner .left div {
   flex: 1 1 auto;
-  padding-left: 50px;
 }
 @media screen and (max-width: 360px) {
   .banner .left div {
@@ -283,7 +286,6 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   font-size: 30px;
   line-height: 40px;
   color: #1B1A17;
-  margin-bottom: 40px;
 }
 @media screen and (max-width: 360px) {
   .banner .left div .title {
@@ -295,9 +297,9 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   line-height: 21px;
   color: rgba(27, 26, 23, 0.82);
   width: 12.5vw;
-  margin-bottom: 60px;
+  margin-left: 50px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .banner .left div p {
     width: 30vw;
   }
@@ -320,7 +322,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 }
 @media screen and (max-width: 360px) {
   .banner .left button {
-    margin: 0;
+    margin: 0 0 0 50px;
     width: 250px;
   }
 }
@@ -336,8 +338,13 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 .banner .right__price {
   position: absolute;
   width: 10vw;
-  top: 130px;
-  left: 100px;
+  top: 110px;
+  left: 200px;
+}
+@media screen and (max-width: 991px) {
+  .banner .right__price {
+    left: 80px;
+  }
 }
 .banner .right__dia {
   position: absolute;
@@ -345,17 +352,22 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   left: 500px;
   bottom: 100px;
 }
+@media screen and (max-width: 991px) {
+  .banner .right__dia {
+    left: 350px;
+  }
+}
 .banner .right .bg {
   position: absolute;
-  left: -60px;
+  left: -20px;
 }
 .banner .right .wath {
   position: absolute;
-  left: 100px;
+  left: 140px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .banner .right .wath {
-    left: -70px;
+    left: -10px;
   }
 }
 @media screen and (max-width: 360px) {
@@ -367,6 +379,12 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 .range {
   background: #FFFFFF;
   padding-bottom: 80px;
+  width: 1366px;
+}
+@media screen and (max-width: 991px) {
+  .range {
+    max-width: 895px;
+  }
 }
 @media screen and (max-width: 360px) {
   .range {
@@ -379,11 +397,6 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   line-height: 19px;
   color: #444240;
   margin-left: 1170px;
-}
-@media screen and (max-width: 820px) {
-  .range__whatch a {
-    margin-left: 700px;
-  }
 }
 @media screen and (max-width: 360px) {
   .range__whatch a {
@@ -406,13 +419,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   display: flex;
   justify-content: center;
   color: #1B1A17;
-  padding: 65px 0;
-}
-@media screen and (max-width: 820px) {
-  .range div h2 {
-    padding: 65px 100px;
-    justify-content: start;
-  }
+  padding: 80px 0 50px 0;
 }
 @media screen and (max-width: 360px) {
   .range div h2 {
@@ -424,11 +431,13 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 .range .block {
   display: flex;
   margin: 0px -27px;
-  padding: 0px 100px;
+  padding: 0 100px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .range .block {
-    padding: 0;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: -17px;
   }
 }
 @media screen and (max-width: 360px) {
@@ -440,6 +449,11 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
 }
 .range .block .cards {
   padding: 0px 17px;
+}
+@media screen and (max-width: 991px) {
+  .range .block .cards {
+    padding: 17px;
+  }
 }
 @media screen and (max-width: 360px) {
   .range .block .cards {
@@ -454,9 +468,9 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   background: #FDFDFB;
   padding: 40px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .range .block .cards .card {
-    width: 250px;
+    width: 300px;
   }
 }
 @media screen and (max-width: 360px) {
@@ -483,7 +497,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   top: 0;
   left: 0;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .range .block .cards .card div img {
     width: 200px;
   }
@@ -515,7 +529,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 767px) {
   .about {
     display: flex;
   }
@@ -525,7 +539,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   background: #F7F5EF;
   position: relative;
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 767px) {
   .about__left {
     display: none;
   }
@@ -535,11 +549,9 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   top: 50px;
   left: 170px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .about__left img {
-    width: 100%;
-    top: 40px;
-    left: 0;
+    display: none;
   }
 }
 .about__right {
@@ -547,7 +559,12 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
   padding: 140px 290px;
   position: relative;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
+  .about__right {
+    padding: 100px 50px;
+  }
+}
+@media screen and (max-width: 767px) {
   .about__right {
     padding: 30px;
   }
@@ -596,7 +613,7 @@ footer div h2:first-child, .range .block .cards .card p:first-child {
     display: none;
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 991px) {
   .about__right img:last-child {
     display: none;
   }
