--- a/scss/Blocks/_All.scss
+++ b/scss/Blocks/_All.scss
@@ -16,22 +16,25 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
 body {
   max-width: 1366px;
-  margin-left: 200px;
-  background-color: dimgray;
-  @media screen and (max-width: 820px) {
-    padding: 0;
-    margin: 0;
+  background: #FDFDFB;
+  @media screen and (max-width: 991px) {
+    max-width: 790px;
+  }
+  @media screen and (max-width: 767px) {
+    max-width: none;
   }
 }
 .wrapper {
   display: grid;
   min-height: 100vh;
-  background: #FDFDFB;
   grid-template: minmax(100px, auto) 1fr minmax(70px, auto) / 1fr;
   grid-template-areas:
     "header"
     "main"
     "footer";
+  max-width: 1166px;
+  margin: 0 auto;
+  
 }
 
 main {
