--- a/scss/Blocks/_Footer.scss
+++ b/scss/Blocks/_Footer.scss
@@ -64,3 +64,67 @@ footer {
     }
   }
 }
+
+
+// footer {
+//   display: flex;
+//   justify-content: space-around;
+//   background: #444240;
+//   grid-area: footer;
+//   padding: 67px;
+//   @media screen and (max-width: 360px) {
+//     display: grid;
+//     grid-template-columns: 1fr;
+//     grid-template-rows: repeat(4, 1fr);
+//   }
+//   .footer__logo {
+//     display: flex;
+//     flex-direction: row;
+//     img {
+//       width: 25px;
+//       margin-right: 5px;
+//       margin-top: -35px;
+//     }
+//   }
+//   div {
+//     display: flex;
+//     flex-direction: column;
+//     @media screen and (max-width: 360px) {
+//       display: grid;
+//       grid-template-columns: repeat(2, 1fr);
+//       grid-template-rows: repeat(3, 1fr);
+//       row-gap: 5px;
+//     }
+//     h2:first-child {
+//       @extend %playbold;
+//       line-height: 19px;
+//       letter-spacing: 0.14em;
+//       color: #FFFFFF;
+//       margin-bottom: 33px;
+//       @media screen and (max-width: 360px) {
+//         margin-bottom: 10px;
+//         grid-column: 1/3;
+//       }
+//     }
+//     h2 {
+//       @extend %robotobold;
+//       letter-spacing: 0.07em;
+//       text-transform: uppercase;
+//       color: #FFFFFF;
+//       margin-bottom: 33px;
+//       @media screen and (max-width: 360px) {
+//         margin-bottom: 10px;
+//         grid-column: 1/3;
+//       }
+//     }
+//     a {
+//       @extend %robotonormal;
+//       font-size: 12px;
+//       line-height: 14px;
+//       color: rgba(255, 255, 255, 0.75);
+//       margin-bottom: 15px;
+//       @media screen and (max-width: 360px) {
+//       }
+//     }
+//   }
+// }
