--- a/scss/Blocks/_Header.scss
+++ b/scss/Blocks/_Header.scss
@@ -3,11 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 36px 6vw;
-  @media screen and (max-width: 820px) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 1080px;
+  padding: 36px;
+  @media screen and (max-width: 991px) {
+    justify-content: space-around;
+    max-width: 890px;
+  }
+  @media screen and (max-width: 767px) {
+    max-width: 760px;
   }
   @media screen and (max-width: 360px) {
     display: grid;
@@ -29,9 +31,6 @@
       position: relative;
       color: #555248;
       margin-right: 65px;
-      @media screen and (max-width: 820px) {
-        margin-right: 30px;
-      }
       @media screen and (max-width: 360px) {
         margin-right: 30px;
       }
