--- a/scss/Blocks/_Network.scss
+++ b/scss/Blocks/_Network.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding: 100px;
+  
   @media screen and (max-width: 820px) {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
@@ -104,3 +105,105 @@
     }
   }
 }
+
+// .network {
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+//   padding: 100px;
+//   @media screen and (max-width: 991px) {
+//     padding: 50px 0;
+//   }
+//   @media screen and (max-width: 767px) {
+//     padding: 20px;
+//   }
+//   @media screen and (max-width:360px) {
+//     grid-template-columns: 1fr;
+//     grid-template-rows: repeat(2, 1fr);
+//     padding: 20px;
+//   }
+//   &__left {
+//     display: flex;
+//     flex-direction: column;
+//     .descr {
+//       flex: 1 1 auto;
+//     }
+//     h2 {
+//       @extend %playnormal;
+//       color: #1B1A17;
+//       margin-bottom: 40px;
+//       @media screen and (max-width:360px) {
+//         font-size: 24px;
+//       }
+//     }
+//     p {
+//       @extend %robotonormal;
+//       font-size: 16px;
+//       line-height: 27px;
+//       color: #444240;
+//       width: 18vw;
+//       margin-bottom: 120px;
+//       @media screen and (max-width: 991px) {
+//         width: 25vw;
+//         margin-bottom: 50px;
+//       }
+//       @media screen and (max-width: 767px) {
+        
+//         width: 60vw;
+//       }
+//       @media screen and (max-width:360px) {
+//         width: 80vw;
+//         margin-bottom: 20px;
+//       }
+//     }
+//     img {
+//       cursor: pointer;
+//       margin-right: 20px;
+//       @media screen and (max-width:360px) {
+//         margin-right: 130px;
+//         margin-bottom: 15px;
+//       }
+//     }
+//     img:last-child {
+//       margin: 0;
+//     }
+//   }
+//   &__links {
+//     display: flex;
+//     align-items: center;
+//     div {
+//       margin-right: 20px;
+//       @media screen and (max-width: 360px) {
+//         margin-bottom: 20px;
+//       }
+//     }
+//   }
+//   &__right {
+//     display: grid;
+//     gap: 10px;
+//     grid-template-columns: repeat(2, 1fr);
+//     grid-template-rows: repeat(2, 1fr);
+//     .gallery {
+//       position: relative;
+//       img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//       }
+//     }
+//     .gallery_1 {
+//       grid-column: 1/1;
+//       grid-row: 1/1;
+//     }
+//     .gallery_2 {
+//       grid-column: 1/1;
+//       grid-row: 2/2;
+//     }
+//     .gallery_3 {
+//       grid-column: 2/2;
+//       grid-row: 1/3;
+//     }
+//   }
+// }
