--- a/scss/Blocks/_Range.scss
+++ b/scss/Blocks/_Range.scss
@@ -1,6 +1,10 @@
 .range {
   background: #FFFFFF;
   padding-bottom: 80px;
+  width: 1366px;
+  @media screen and (max-width: 991px) {
+    max-width: 895px;
+  }
   @media screen and (max-width: 360px) {
     padding-left: 20px;
   }
@@ -12,9 +16,6 @@
       line-height: 19px;
       color: #444240;
       margin-left: 1170px;
-      @media screen and (max-width:820px) {
-        margin-left: 700px;
-      }
       @media screen and (max-width:360px) {
         margin-left: 220px;
       }
@@ -38,11 +39,7 @@
       justify-content: center;
       @extend %playnormal;
       color: #1B1A17;
-      padding: 65px 0;
-      @media screen and (max-width: 820px) {
-        padding: 65px 100px;
-        justify-content: start;
-      }
+      padding: 80px 0 50px 0;
       @media screen and (max-width: 360px) {
         font-size: 24px;
         justify-content: start;
@@ -53,9 +50,11 @@
   .block {
     display: flex;
     margin: 0px -27px;
-    padding: 0px 100px;
-    @media screen and (max-width: 820px) {
-      padding: 0;
+    padding: 0 100px;
+    @media screen and (max-width: 991px) {
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: -17px;
     }
     @media screen and (max-width: 360px) {
       flex-direction: column;
@@ -64,6 +63,9 @@
     }
     .cards {
       padding: 0px 17px;
+      @media screen and (max-width: 991px) {
+        padding: 17px;
+      }
       @media screen and (max-width: 360px) {
         padding: 17px;
       }
@@ -74,8 +76,8 @@
         height: 467px;
         background: #FDFDFB;
         padding: 40px;
-        @media screen and (max-width: 820px) {
-          width: 250px;
+        @media screen and (max-width: 991px) {
+          width: 300px;
         }
         @media screen and (max-width: 360px) {
           width: 320px;
@@ -99,7 +101,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            @media screen and (max-width: 820px) {
+            @media screen and (max-width: 991px) {
               width: 200px;
             }
             @media screen and (max-width: 360px) {
